@@ -8,6 +8,8 @@ grails.project.source.level = 1.7
 grails.plugin.location.'gtp-domain' = '../gtp-domain'
 //grails.project.war.file = "target/${appName}-${appVersion}.war"
 
+grails.tomcat.jvmArgs= ["-Xms256m",  "-Xmx1024m", "-XX:PermSize=512m", "-XX:MaxPermSize=512m"]
+
 grails.project.fork = [
     // configure settings for compilation JVM, note that if you alter the Groovy version forked compilation is required
     //  compile: [maxMemory: 256, minMemory: 64, debug: false, maxPerm: 256, daemon:true],
@@ -15,7 +17,7 @@ grails.project.fork = [
     // configure settings for the test-app JVM, uses the daemon by default
     test: [maxMemory: 768, minMemory: 64, debug: false, maxPerm: 256, daemon:true],
     // configure settings for the run-app JVM
-    run: [maxMemory: 1024, minMemory: 256, debug: false, maxPerm: 256, forkReserve:false],
+    run: [maxMemory: 1024, minMemory: 256, debug: false, maxPerm: 512, forkReserve:false],
     // configure settings for the run-war JVM
     war: [maxMemory: 768, minMemory: 64, debug: false, maxPerm: 256, forkReserve:false],
     // configure settings for the Console UI JVM
